[package]
name = "llil_parser"
version = "0.1.0"
authors = ["thebarbershopper <cld251@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
rayon = "1.8.0"

[dependencies.timeloop]
git = "https://github.com/ctfhacker/timeloop"
default-features = false
features = ["disable"]

[dependencies.binja-rs]
path = "../../../binja-rs"
# features = ["introspection"]
features = []
